# my-rss-feeder

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
.memo/: date-filter-string-comparison-bug.md
doc/: auto-update-design.md  implementation-plan.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  webview.rs
src-tauri/src/db/: article_repo.rs  feed_repo.rs  migrations.rs  mod.rs  settings_repo.rs
src-tauri/src/feed/: discovery.rs  fetcher.rs  mod.rs  parser.rs
src-tauri/src/models/: article.rs  feed.rs  mod.rs  settings.rs
src-tauri/src/notification/: scheduler.rs
src-tauri/src/ogp/: fetcher.rs  image_cache.rs  mod.rs
src/components/: AddFeedButton.tsx  AddFeedDialog.tsx  ArticleCard.tsx  ArticleList.tsx  ArticleWebView.tsx  DateFilter.tsx  DeleteFeedDialog.tsx  EmptyState.tsx  FeedList.tsx  FeedListItem.tsx  MainContent.tsx  ResizeHandle.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarHeader.tsx  SortToggle.tsx  Toolbar.tsx
src/components/__tests__/: AddFeedDialog.test.tsx  ArticleCard.test.tsx  DateFilter.test.tsx  DeleteFeedDialog.test.tsx  FeedList.test.tsx  SortToggle.test.tsx
src/hooks/: useAppUpdater.ts  useOgpFetch.ts
src/hooks/__tests__/: useOgpFetch.test.ts
src/stores/: articleViewStore.ts  feedStore.ts  settingsStore.ts
src/stores/__tests__/: feedStore.test.ts
src/types/: feed.ts  settings.ts
(+1 files in other folders)
